--- a/views/contacto.html
+++ b/views/contacto.html
@@ -10,11 +10,11 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-	<title>DogMar - Conoce quienes somos</title>
+	<title>DogMar - Ubicación y Contacto</title>
 	<meta name="description"
-		content="DogMar Hospedaje y refugio para perros y gatos. Conocé quienes somos, nuestras capacitaciones.">
+		content="DogMar Hospedaje y refugio para perros y gatos. Ubicación de nuestra institucion y Contacto ">
 	<meta name="keywords"
-		content="DogMar, conoce quienes somos, capacitaciones, Adiestradora,  servicio para mascotas,hospedaje mascotas,hospedaje perros,hospedaje gatos, refugio mascota, refugio perros, refugio gatos, adopción de perros, adopción, adopción de gatos, adopción responsable, adiestramiento Canino, adiestramiento perros, adiestramiento gatos, conduta animal, guarderia canina, hotel para perros, hotel para gatos, guarderia canina zona norte, transporte mascotas, cuidados en guarderia">
+		content="DogMar servicio para mascotas, hospedaje mascotas, hospedaje perros, hospedaje gatos, Ubicación de nuestro predio, Calificanos, Consulta Precios de estadia, contactanos, refugio mascota, refugio perros, refugio gatos, adopción de perros, adopción, adopción de gatos, adopción responsable, adiestramiento Canino, adiestramiento perros, adiestramiento gatos, conduta animal, guarderia canina, hotel para perros, hotel para gatos, guarderia canina zona norte, transporte mascotas, cuidados en guarderia">
 
 	<link rel="stylesheet" href="../css/main.css">
 	<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
@@ -23,7 +23,8 @@
 
 <body>
 	<div class="container-fluid grilla">
-		<header id="rt-header" class="row cabecera">
+		<header id="rt-header" class=" cabecera header">
+
 			<div class="flex">
 				<a class="logo" href="../index.html">
 					<img class="distorcion logo_img" src="../img/FullColor_1280x1024_300dpi-2-min.jpg" alt="logo"
@@ -36,90 +37,222 @@
 			<div class="encabezado">
 				<ul class="nav nav-tabs encabezado" id="color">
 					<li role="presentation" class="encabezado"><a href="../index.html"><b>Inicio</b></a></li>
-					<li role="presentation" class="encabezado active"><a href="./quienesomos.html"><b>Quienes
-								Somos</b></a></li>
+					<li role="presentation" class="encabezado"><a href="./quienesomos.html"><b>Quienes Somos</b></a>
+					</li>
 					<li role="presentation" class="encabezado"><a href="./servicios.html"><b>Servicios</b></a></li>
 					<li role="presentation" class="encabezado"><a href="./galeria.html"><b>Galeria</b></a></li>
-					<li role="presentation" class="encabezado"><a href="./contacto.html"><b>Contacto</b></a></li>
+					<li role="presentation" class="encabezado active"><a href="./contacto.html"><b>Contacto</b></a></li>
 				</ul>
 
 			</div>
-		</header>
-		<main id="rt-main" class="row cuerpo">
-			<div>
-				<h1><b>Quienes Somos</b></h1>
-				<div class="caja__QSomos">
-					<div id="historia">
-						<h2><strong>Nuestra Historia</strong></h2>
-						<div class="img__Con__Parrafo">
-							<img class="distorcion img__Animation" src="../img/img_6610_digit_serial_number-min.jpg"
-								alt="perroBesandoMujer" border="2px" width="250px" height="200px">
 
-							<p class="margenes"><em><b>DogMar nace en 2016 como algo natural en mi vida. Mi pasión por
-										los perros me motivó a capacitarme en el grato arte de conocer, entender y
-										querer a los animales. Hoy somos un equipo de personas que compartimos esa misma
-										pasión y la volcamos todos los días en lo que hacemos.</b></em></p>
-						</div>
-					</div>
-					<div id="que__Ofrecemos">
-						<h2><b>¿Que Ofrecemos?</b></h2>
-						<div class="img__Con__Parrafo">
-							<img class="distorcion img__Animation" src="../img/_mg_8407.jpg_140025018.jpg"
-								alt="HombreLimpiandoPerro" border="2px" width="250px" height="200px">
-							<p class="margenes">En DogMar tenemos un solo objetivo: hacer las cosas bien. <br>Nos
-								esforzamos para brindar un servicio de alta calidad y a la medida de sus necesidades.
-								Queremos ser su aliado en la educación y el cuidado de su mascota, ofreciéndole una
-								amplia gama de servicios a domicilio y en nuestro exclusivo campo en Pilar.</p>
-						</div>
-					</div>
-					<div id="valores">
-						<h2><b>Nuestros Valores</b></h2>
-						<div>
+		</header>
+		<main id="rt-main" class="cuerpo">
+
+			<h1><b>Ubicacion y Contacto</b></h1>
+			<div id="flex__Mapa">
+				<h2><b>Ubicación</b></h2>
+
+
+				<a href="https://www.google.com.ar/maps/place/Plaza+12+de+octubre/@-34.4584381,-58.9149246,18z/data=!4m5!3m4!1s0x95bc9cd1e5b542c7:0x15c9f39551b5c4fc!8m2!3d-34.458692!4d-58.913916"
+					target="_blank">
+					<img class="img__Mapa distorcion" src="../img/canvas.png" alt="mapa" border="2px" width="85%"
+						height="478px">
+				</a>
+			</div>
+			<div>
+				<p>Ubicación: Plaza 12 de octubre, Rivadavia, Gran Buenos Aires, Buenos Aires. <br> Para visualizar la
+					dirección en el mapa, clickee <a
+						href="https://www.google.com.ar/maps/place/Plaza+12+de+octubre/@-34.4584381,-58.9149246,18z/data=!4m5!3m4!1s0x95bc9cd1e5b542c7:0x15c9f39551b5c4fc!8m2!3d-34.458692!4d-58.913916"
+						style="color:#040404">aquí</a></p>
+			</div>
+			<p id="calificanos">
+				<button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample"
+					aria-expanded="false" aria-controls="collapseExample">
+					Clickee para califinarnos
+				</button>
+			</p>
+			<div class="collapse" id="collapseExample">
+				<div class="dentro card-body">
+					<div class="container">
+						<form id="formulario1" action="canderichiardi@gmail.com" method="post">
 							<ul>
-								<li class="margenes"><span class="vinetas__Medida">&#128062;</span>Creemos en la ética
-									como elemento esencial de la vida, en todos sus ámbitos.</li>
-								<li class="margenes"><span class="vinetas__Medida">&#128062;</span>Creemos en la
-									dignidad y en el respeto a las personas.</li>
-								<li class="margenes"><span class="vinetas__Medida">&#128062;</span>Creemos en el cuidado
-									y amor a los animales.</li>
+								<li>
+									<h2 style="color: #040404;" id="titulo__Form"><b>Su opinion nos interesa</b></h2>
+									<ul class="flex-outer">
+										<li>
+											<p style="color: #040404;" id="parrafo__Form1"><b>Nuestro compromiso es
+													darle un servicio de calidad. <br>Agradecemos sus comentarios o
+													sugerencias sobre nuestra calidad de servicio.</b></p>
+										</li>
+										<li>
+											<label for="nombre__Apellido">Nombre y Apellido:</label>
+											<input type="text" placeholder="Escribe tu Nombre y Apellido completo"
+												name="nombreApellido" size="40" required autofocus>
+										</li>
+										<li>
+											<label for="telefono">Teléfono:</label>
+											<input type="tel" name="telefono" placeholder="+54 11 9999-9999" required
+												autofocus>
+										</li>
+										<li>
+											<label for="email">E-Mail:</label>
+											<input type="email" name="email" placeholder="nombre@ejemplo.com" size="40"
+												required autofocus>
+										</li>
+										<li>
+											<label for="atencionTelefonica">Atencion Telefónica:</label>
+											<select name="atencionTelefonica" id="atencionTelefonica">
+												<option value="1">Muy Buena</option>
+												<option value="2">Buena</option>
+												<option value="3">Regular</option>
+												<option value="4">Mala/Revista</option>
+												<option value="5">Muy Mala</option>
+											</select>
+										</li>
+										<li>
+											<label for="puntualidad">Puntualidad:</label>
+											<select name="puntualidad" id="puntualidad">
+												<option value="1">Muy Buena</option>
+												<option value="2">Buena</option>
+												<option value="3">Regular</option>
+												<option value="4">Mala/Revista</option>
+												<option value="5">Muy Mala</option>
+											</select>
+										</li>
+										<li>
+											<label for="amabilidad">Amabilidad:</label>
+											<select name="amabilidad" id="amabilidad">
+												<option value="1">Muy Buena</option>
+												<option value="2">Buena</option>
+												<option value="3">Regular</option>
+												<option value="4">Mala/Revista</option>
+												<option value="5">Muy Mala</option>
+											</select>
+										</li>
+										<li>
+											<label for="comenta">Comentarios o Sugerencias:</label>
+											<textarea name="comenta" id="comenta" cols="15" rows="4"></textarea>
+										</li>
+										<li>
+											<p>Sexo</p>
+											<ul class="flex-inner">
+												<li>
+													<input type="radio" name="sexo" value="m">
+													<label for="sexo">Masculino</label>
+												</li>
+												<li>
+													<input type="radio" name="sexo" value="f">
+													<label for="sexo">Femenino</label>
+
+												</li>
+											</ul>
+										</li>
+										<li>
+											<button id="boton"><input type="submit" value="Enviar"></button>
+											<button id="boton"><input type="reset" value="Borrar"></button>
+
+										</li>
+									</ul>
+								</li>
 							</ul>
-						</div>
-					</div>
-					<div id="staff">
-						<h3><strong>Nuestro Staff</strong></h3>
-						<div class="img__Con__Parrafo">
-							<img class="distorcion img__Animation" src="../img/cande.jpg-min.jpg" alt="dueñaCandela"
-								border="2px" width="200px" height="250px">
-							<p class="margenes">Mi nombre es Candela, soy la actual Directora de DogMar y desde los 3
-								años que comparto mi vida con perros, entre otra gran cantidad de animales. Siempre fui
-								una apasionada de la naturaleza y fanática de los perros. De muy chica tuve la
-								oportunidad de tener como mascotas y amigos a más de 10 perros entre ellos Cockers,
-								Caniches y varios mestizos. Fascinada por su mundo, comencé desde muy chica a comprender
-								su lenguaje y a interpretar cada uno de sus movimientos volviéndome de cada perro que
-								conocía una gran amiga. El vínculo y la conexión que me une a los perros fue siempre muy
-								especial. Hace unos años, capacitándome en diversas instituciones tanto locales como
-								extranjeras di formalidad a mi pasión y es así como nació DogMar.</p>
-						</div>
-					</div>
-					<div id="capacitaciones">
-						<h3><strong>Estudios y Capacitación</strong></h3>
-						<p class="margenes">Actualmente recibida de Adiestradora Canina Profesional en la UBA, continúo
-							constantemente mi formación. Capacitándome sobre nuevas técnicas y herramientas en Europa y
-							Estados Unidos.</p>
-					</div>
-					<div id="equipo">
-						<h3>El Equipo</h3>
-						<p class="margenes">La escuela está formada por un equipo interdisciplinario de profesionales
-							con diversos títulos universitarios y de extensión, tanto a nivel nacional como
-							internacional.
-							<br>En este equipo por sobre todo compartimos la misma pasión, amor y respeto por los
-							animales, haciendo del hermoso vínculo que nos une a ellos nuestra profesión, amando cada
-							minuto de nuestro trabajo.</p>
+						</form>
 					</div>
 				</div>
-				<hr>
-		</main>
+			</div>
+			<p id="formulario">
+				<button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample1"
+					aria-expanded="false" aria-controls="collapseExample1">
+					Clickee para realizar una consulta
+				</button>
+			</p>
+			<div class="collapse" id="collapseExample1">
+				<div class="dentro card-body">
 
+					<div class="container">
+						<form id="formulario2" action="canderichiardi@gmail.com" method="post">
+							<ul>
+								<li>
+									<h2 style="color: #040404;" id="titulo__Form2"><b>Consultas</b></h2>
+									<ul class="flex-outer">
+										<li>
+											<label for="nombreApellido">Nombre y Apellido:</label>
+											<input type="text" placeholder="Escribe tu Nombre y Apellido completo"
+												name="nombreApellido" size="40" required autofocus>
+										</li>
+										<li>
+											<label for="telefono">Teléfono:</label>
+											<input type="tel" name="telefono" placeholder="+54 11 9999-9999" required
+												autofocus>
+										</li>
+										<li>
+											<label for="email">E-Mail:</label>
+											<input type="email" name="email" placeholder="nombre@ejemplo.com" size="40"
+												required autofocus>
+										</li>
+										<li>
+											<label for="codigoPostal">Codigo Postal:</label>
+											<input type="number" autocomplete="postal-code" name="codigoPostal">
+										</li>
+										<li>
+											<label for="localidad">Localidad:</label>
+											<input type="text" name="localidad" size="30">
+										</li>
+										<li>
+											<label for="comoConocio">¿Como se enteró de DogMar?</label>
+											<select name="comoConocio" id="comoConocio">
+												<option value="1">Instagram</option>
+												<option value="2">Buscador de Google</option>
+												<option value="3">Familia/Amigos</option>
+												<option value="4">Dario/Revista</option>
+												<option value="5">Internet</option>
+												<option value="6">PetShop</option>
+												<option value="7">Otro</option>
+											</select>
+										</li>
+										<li>
+											<label for="motivo">Motivo de consulta</label>
+											<select name="motivo" id="motivo">
+												<option value="1">Contratar Servicio de Alojamiento</option>
+												<option value="2">Perdir Información</option>
+												<option value="3">Actualizar Datos</option>
+												<option value="4">Solicitar Adopcion</option>
+												<option value="5">Consultar Precios</option>
+												<option value="6">contratar servicio de Adiestramiento</option>
+												<option value="7">Felicitación</option>
+												<option value="8">Queja</option>
+											</select>
+										</li>
+										<li>
+											<label for="consulta">Consulta:</label>
+											<textarea name="consulta" id="consulta" cols="15" rows="4"></textarea>
+										</li>
+										<li>
+											<p>Sexo</p>
+											<ul class="flex-inner">
+												<li>
+													<input type="radio" name="sexo" value="m">
+													<label for="sexo">Masculino</label>
+												</li>
+												<li>
+													<input type="radio" name="sexo" value="f">
+													<label for="sexo">Femenino</label>
+
+												</li>
+											</ul>
+										</li>
+										<li>
+											<button id="boton"><input type="submit" value="Enviar"></button>
+											<button id="boton"><input type="reset" value="Borrar"></button>
+
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</form>
+					</div>
+				</div>
+		</main>
 		<footer class="footer">
 			<div id="pie">
 				<ul class="nav">
@@ -128,11 +261,19 @@
 							<li><a href="./servicios.html#alojamiento">Hospedaje</a></li>
 							<li><a href="./servicios.html#refugio">Refugio</a></li>
 							<li><a href="./servicios.html#adopta">Adopción Reponsable</a></li>
-							<li><a href="./contacto.html#calificanos">Calificanos</a></li>
+							<li><a href="#calificanos">Calificanos</a></li>
 							<li><a href="./servicios.html#adiestra">Adistramiento</a></li>
 						</ul>
 					</li>
-
+					<li><a href="./quienesomos.html"><b>Quienes Somos</b></a>
+						<ul>
+							<li><a href="./quienesomos.html#historia">Historia</a></li>
+							<li><a href="./quienesomos.html#que__Ofrecemos">Que Ofrecemos</a></li>
+							<li><a href="./quienesomos.html#valores">Nuestros Valores</a></li>
+							<li><a href="./quienesomos.html#staff">Staff</a></li>
+							<li><a href="./quienesomos.html#capacitaciones">Estudios y Capacitaciones</a></li>
+						</ul>
+					</li>
 					<li><a href="./views/servicios.html"><b>Servicios</b></a>
 						<ul>
 							<li><a href="./servicios.html#alojamiento">Hospedaje</a></li>
@@ -143,7 +284,7 @@
 							<li><a href="./servicios.html#menu">Conocer antes de hospedar</a></li>
 							<li><a href="./servicios.html#informacion">Información</a></li>
 							<li><a href="./servicios.html#menu2">Preguntas Frecuentes</a></li>
-							<li><a href="./contacto.html#formulario">Consultar Precio</a></li>
+							<li><a href="#formulario">Consultar Precio</a></li>
 						</ul>
 					</li>
 					<li><a href="./galeria.html"><b>Galeria</b></a>
@@ -154,19 +295,9 @@
 							<li><a href="./galeria.html#adopcionesFeliz">Mascotas al ser Adoptadas</a></li>
 						</ul>
 					</li>
-					<li><a href="./contacto.html"><b>Contacto</b></a>
-						<ul>
-							<li><a href="./contacto.html">Ubicación</a></li>
-							<li><em><b>Celular: </b> 11 9999-9999</em></li>
-							<li><em><b>Mail: </b>canderichiardi@gmail.com</em></li>
-							<li><em><b>Dirección: </b>Dirección 9999</em></li>
-						</ul>
-				</ul>
-				</li>
-				</ul>
 
+				</ul>
 			</div>
-
 			<div class="social-media-links">
 				<ul>
 					<li>
@@ -231,7 +362,6 @@
 			</div>
 		</footer>
 	</div>
-
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
